@@ -2,6 +2,12 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-03-17:
+
+- Fixed nameref self-reference loop detection; as of ksh 93u 2010-11-22, this
+  failed for loops of more than two refs. For example, 'nameref a=b b=c c=a'
+  now correctly outputs an 'invalid self reference' error message.
+
 2023-03-16:
 
 - Backported a fix from ksh 93v- beta for a bug in the 'for' loop optimizer
